#7 Fix ViewSpeechComponent Save Functionality - Added ngModel on selectbox to fetch the speech selected by the user. Added Vertical Scrollbar on Speech List if list exceeds to 9 up

--- a/src/app/speech/containers/view-speech/view-speech.component.scss
+++ b/src/app/speech/containers/view-speech/view-speech.component.scss
@@ -17,6 +17,8 @@
 /* TABS */
 .tabs {
   padding: 0 17px;
+  max-height: 400px;
+  overflow-y: scroll;
 
   select {
     @include max-media(991px) {
